Fix spacing and font sizes on careers page

--- a/source/assets/stylesheets/templates/_about.scss
+++ b/source/assets/stylesheets/templates/_about.scss
@@ -214,6 +214,25 @@
 
     h1, h2, a { color: white; }
     a { border-color: rgba(white, 0.4); }
+
+    p {
+      font-size: ds-rem-calc(14);
+      @include media($tablet) { font-size: ds-rem-calc(16); }
+      @include media($desktop) { font-size: ds-rem-calc(18); }
+    }
+
+    .about__section {
+
+      &__content {
+        @include span-columns(10);
+        @include shift(1);
+
+        @include media($tablet) {
+          @include span-columns(6);
+          @include shift(3);
+        }
+      }
+    }
   }
 
   &__work {
@@ -223,6 +242,17 @@
     h2 {
       text-align: center;
       margin-bottom: 50px;
+      font-size: ds-rem-calc(24);
+      @include media($tablet) { font-size: ds-rem-calc(28); }
+      @include media($desktop) { font-size: ds-rem-calc(32); }
+    }
+
+    ul {
+      li {
+        font-size: ds-rem-calc(14);
+        @include media($tablet) { font-size: ds-rem-calc(16); }
+        @include media($desktop) { font-size: ds-rem-calc(18); }
+      }
     }
 
     .about__section {
@@ -247,6 +277,28 @@
     h2 {
       text-align: center;
       margin-bottom: 50px;
+      font-size: ds-rem-calc(24);
+      @include media($tablet) { font-size: ds-rem-calc(28); }
+      @include media($desktop) { font-size: ds-rem-calc(32); }
+    }
+
+    h3 {
+      font-size: ds-rem-calc(18);
+      @include media($tablet) { font-size: ds-rem-calc(24); }
+      @include media($desktop) { font-size: ds-rem-calc(28); }
+    }
+
+    ul {
+      li {
+        font-size: ds-rem-calc(14);
+        @include media($tablet) { font-size: ds-rem-calc(16); }
+        @include media($desktop) { font-size: ds-rem-calc(18); }
+      }
+    }
+    p {
+      font-size: ds-rem-calc(14);
+      @include media($tablet) { font-size: ds-rem-calc(16); }
+      @include media($desktop) { font-size: ds-rem-calc(18); }
     }
 
     .about__section {
